--- a/asset/profil.css
+++ b/asset/profil.css
@@ -4,7 +4,7 @@
   background: rgba(0, 0, 0, 0.4);
   padding: 40px;
   text-align: center;
-  margin: auto;
+  margin-top: -40px;
   color: white;
   font-family: 'Century Gothic',sans-serif;
   }
