--- a/asset/utama.css
+++ b/asset/utama.css
@@ -10,5 +10,6 @@ body{
   font-family: monospace;
   font-style: italic;
   font-size: 5mm;
-  background-color: cadetblue;
+  margin-top: 100px;
+  /* background-color: cadetblue; */
   }
